# nfc-tools

./: ProjectHome.md  README  configure.ac
branches/libfreefare-desfire/: configure.ac  libnfc-r324-export-iso14443a_crc.patch
branches/libfreefare-desfire/examples/: Makefile.am  mifare-classic-format.c  mifare-classic-write-ndef.c  mifare-desfire-format.c  mifare-desfire-info.c
branches/libfreefare-desfire/libfreefare/: Makefile.am  freefare.c  freefare.h  freefare_internal.h  mad.c  mifare_desfire.c  mifare_desfire_authenticate.c  mifare_desfire_key.c
branches/libfreefare-desfire/test/: Makefile.am  mifare_classic_fixture.c  test_mifare_desfire.c  test_mifare_desfire_des.c  test_mifare_desfire_key.c
branches/libfreefare-releng-0.2/: configure.ac
branches/libfreefare-ultralight/libfreefare/: Makefile.am  freefare.h
examples/: Makefile.am  mifare-classic-format.c  mifare-classic-write-ndef.c  mifare-desfire-access.c  mifare-desfire-format.c  mifare-desfire-info.c
libfreefare/: Makefile.am  freefare.c  freefare.h  freefare_internal.h  mad.c  mifare_classic.c  mifare_desfire.c  mifare_desfire_aid.c  mifare_desfire_authenticate.c  mifare_desfire_key.c  mifare_ultralight.3  mifare_ultralight.c
tags/libfreefare-0.2.3/: NEWS
test/: Makefile.am  mifare_classic_fixture.c  mifare_desfire_fixture.c  mifare_ultralight_fixture.c  test_mifare_classic.c  test_mifare_desfire.c  test_mifare_desfire_des.c  test_mifare_desfire_key.c
wiki/: NfcEventD.wiki  desknfc.wiki  libfreefare.wiki  mfoc.wiki  nfcd.wiki  nfcutils.wiki  pam_nfc.wiki
(+1 files in other folders)
